Support for media query (prefers-color-scheme: dark)

--- a/www.filebot.net/script.html
+++ b/www.filebot.net/script.html
@@ -38,18 +38,19 @@
 			</div>
 
 			<div class="content">
-				<div class="section screenshot" style="border:none; box-shadow:none; background:white; margin-left: 20px">
-					<a href="https://github.com/filebot/scripts" target="_blank"><img alt="See Examples" src="images/script.png" /></a>
-					<span class="quote">Anything is possible</span>
+				<div class="main-section-screenshot">
+					<a href="https://github.com/filebot/scripts" target="_blank"><img alt="See Examples" width="330" src="screenshots/script.png" /></a>
 				</div>
 				<div class="section about">
 					<h2>About</h2>
 					<div class="main-section-paragraph">
 						<p>
-						FileBot makes scripting and automation as easy as it gets. Just script everything in <a href="http://groovy-lang.org/">Groovy</a> 
-						instead of bothering with cumbersome cmd and bash scripts. It's the same on all platforms and much more powerful. 
-						The provided <a href="#functions">functions</a> are the same as in the <a href="cli.html">CLI</a> and <a href="cli.html#arguments">parameter usage</a> 
-						is also exactly the same.
+							FileBot makes scripting and automation as easy as it gets. Just script everything in <a href="http://groovy-lang.org/">Groovy</a> 
+							instead of bothering with cumbersome cmd and bash scripts. It's the same on all platforms and much more powerful.
+						</p>
+						<p>
+							The provided <a href="#functions">functions</a> are the same as in the <a href="cli.html">CLI</a> and <a href="cli.html#arguments">parameter usage</a> 
+							is also exactly the same.
 						</p>
 					</div>
 					<h2 id="overview">Examples</h2>
@@ -66,23 +67,20 @@
 					away or as a reference for building your own more advanced scripts. If you wrote a really useful script 
 					please <a href="forums/viewforum.php?f=4">share it with us</a>.
 					</p>
-					<div style="margin: 12px 300px 20px 25px; padding: 5px; border: thin dotted lavender; background: #FDFDFF">
-						<span style="text-decoration: underline">Script Index:</span>
-						<ul style="margin: 3px">
-							<li><a href="amc.html">Automated Media Center</a></li>
-							<li><a href="forums/viewtopic.php?p=204#p204">Fetch artwork and nfo files for TV Shows</a></li>
-							<li><a href="forums/viewtopic.php?p=205#p205">Fetch artwork and nfo files for Movies</a></li>
-							<li><a href="forums/viewtopic.php?p=8871#p8871">Fetch subtitles for all files</a></li>
-							<li><a href="forums/viewtopic.php?p=1341#p1341">Delete left behind clutter files and empty folders</a></li>
-							<li><a href="forums/viewtopic.php?p=2459#p2459">Query Rename History</a></li>
-							<li><a href="forums/viewtopic.php?p=5394#p5394">View or Clear Extended Attributes</a></li>
-							<li><a href="forums/viewtopic.php?p=53#p53">Export Media Index to CSV file</a></li>
-							<li><a href="forums/viewtopic.php?p=12396#p12396">Calculate CRC32 and Verify File Integrity</a></li>
-							<li><a href="forums/viewtopic.php?p=19132#p19132">Find Missing Episodes</a></li>
-							<li><a href="forums/viewtopic.php?p=23171#p23171">Find Duplicate Movie or Episode files</a></li>
-							<li><a href="forums/viewtopic.php?p=44992#p44992">Write Embedded Tags</a></li>
-						</ul>
-					</div>
+					<ul class="repository">
+						<li><a href="amc.html">Automated Media Center</a></li>
+						<li><a href="forums/viewtopic.php?p=204#p204">Fetch artwork and nfo files for TV Shows</a></li>
+						<li><a href="forums/viewtopic.php?p=205#p205">Fetch artwork and nfo files for Movies</a></li>
+						<li><a href="forums/viewtopic.php?p=8871#p8871">Fetch subtitles for all files</a></li>
+						<li><a href="forums/viewtopic.php?p=1341#p1341">Delete left behind clutter files</a></li>
+						<li><a href="forums/viewtopic.php?p=2459#p2459">Query Rename History</a></li>
+						<li><a href="forums/viewtopic.php?p=5394#p5394">View or Clear Extended Attributes</a></li>
+						<li><a href="forums/viewtopic.php?p=53#p53">Export Media Index to CSV file</a></li>
+						<li><a href="forums/viewtopic.php?p=12396#p12396">Calculate CRC32 and Verify File Integrity</a></li>
+						<li><a href="forums/viewtopic.php?p=19132#p19132">Find Missing Episodes</a></li>
+						<li><a href="forums/viewtopic.php?p=23171#p23171">Find Duplicate Movie or Episode files</a></li>
+						<li><a href="forums/viewtopic.php?p=44992#p44992">Write Embedded Tags</a></li>
+					</ul>
 
 
 <h3 id="examples">Example Scripts</h3>
