Fix Emoji space

--- a/www.filebot.net/thanks.html
+++ b/www.filebot.net/thanks.html
@@ -2,8 +2,8 @@
 <html>
 	<head>
 		<title>Thank you for purchasing FileBot! 💯</title>
-		<link rel="stylesheet" href="base.css">
 		<link rel="icon" href="favicon.png" sizes="16x16 32x32" type="image/png">
+		<link rel="stylesheet" href="base.css" type="text/css" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 	</head>
 	<body>
@@ -59,7 +59,7 @@
 				</div>
 
 				<p class="suggestion" style="margin-top: 565px; margin-bottom: 60px">
-				📘 Please read <a target="_blank" href="activate.html">How do I activate my license?</a> for additional license activation options.
+					📘 &nbsp; Please read <a target="_blank" href="activate.html">How do I activate my license?</a> for additional license activation options.
 				</p>
 
 				<div class="section contact">
