Support for media query (prefers-color-scheme: dark)

--- a/www.filebot.net/thanks.html
+++ b/www.filebot.net/thanks.html
@@ -27,15 +27,14 @@
 			</div>
 
 			<div class="content">
-				<div class="screenshot">
-					<img alt="screenshot" src="images/mail.png" width="240" height="154" />
+				<div class="screenshot" style="margin: 10px 0px 0px 40px">
+					<img alt="screenshot" src="images/mail.png" width="124" height="165" />
 				</div>
 				<div class="section about">
-					<h2 style="margin-left: 58px">Thank you for purchasing FileBot! 💯</h2>
+					<h2 style="margin-top: 80px; text-align: center;">Thank you for purchasing FileBot! 💯</h2>
 					<p>
-					Your license has been issued and will arrive in your mail box shortly. You will receive <a target="_blank" href="activate.html">2 emails</a>. The first email from <a target="_blank" href="mailto:help@paddle.com">help@paddle.com</a> will contain your License Key as plain text. The second email from <a target="_blank" href="mailto:license@filebot.net">license@filebot.net</a> will contain your License File as attachment. Either one can be used to activate FileBot.
+						Your license has been issued and will arrive in your mail box shortly. You will receive <a target="_blank" href="activate.html">2 emails</a>. The first email from <a target="_blank" href="mailto:help@paddle.com">help@paddle.com</a> will contain your License Key as plain text. The second email from <a target="_blank" href="mailto:license@filebot.net">license@filebot.net</a> will contain your License File as attachment. Either one can be used to activate FileBot.
 					</p>
-
 					<div class="review message box">
 						<img src="images/information.png" width="48" height="48" style="float: left; margin: 0px 5px 50px 0px" />
 						<p>
