Add Next Steps number label

--- a/www.filebot.net/thanks.html
+++ b/www.filebot.net/thanks.html
@@ -4,6 +4,7 @@
 		<title>Thank you for purchasing FileBot! 💯</title>
 		<link rel="icon" href="favicon.png" sizes="16x16 32x32" type="image/png">
 		<link rel="stylesheet" href="base.css" type="text/css" />
+		<link rel="stylesheet" href="thanks.css" type="text/css" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 	</head>
 	<body>
@@ -27,37 +28,39 @@
 			</div>
 
 			<div class="content">
-				<div class="screenshot" style="margin: 10px 0px 0px 40px">
-					<img alt="screenshot" src="images/mail.png" width="124" height="165" />
+				<div class="screenshot mail">
+					<img src="images/mail.png" width="124" height="165" />
 				</div>
 				<div class="section about">
-					<h2 style="margin-top: 80px; text-align: center;">Thank you for purchasing FileBot! 💯</h2>
+					<h2>Thank you for purchasing FileBot! 💯</h2>
 					<p>
-						Your license has been issued and will arrive in your mail box shortly. You will receive <a target="_blank" href="activate.html">2 emails</a>. The first email from <a target="_blank" href="mailto:help@paddle.com">help@paddle.com</a> will contain your License Key as plain text. The second email from <a target="_blank" href="mailto:license@filebot.net">license@filebot.net</a> will contain your License File as attachment. Either one can be used to activate FileBot.
+						Your license has been issued and will arrive in your inbox shortly. You will receive <a target="_blank" href="activate.html">2 emails</a>. The first email from <a target="_blank" href="mailto:help@paddle.com">help@paddle.com</a> will contain your License Key as plain text. The second email from <a target="_blank" href="mailto:license@filebot.net">license@filebot.net</a> will contain your License File as attachment. Either one can be used to activate FileBot.
 					</p>
 					<div class="review message box">
-						<img src="images/information.png" width="48" height="48" style="float: left; margin: 0px 5px 50px 0px" />
+						<img src="images/information.png" width="48" height="48" />
 						<p>
 						Please store your License File carefully and make sure to keep a copy on Google Drive. If you lose both your License Key and your License File, you may <u>not</u> be able to recover your license in case of data loss, and you may need to purchase a new one.
 						</p>
 					</div>
 				</div>
 
-				<div class="section tutorial" style="margin-top: 70px">
+				<div class="section tutorial">
 					<img class="icon" src="images/lists.png" alt="start" width="48" height="48" />
 					<h2>Next Steps</h2>
 					<p>
 					Please <strong>Select & Copy</strong> your <strong>License Key</strong>, then click <strong>Rename</strong> and select <strong>Paste License Key</strong> when prompted. Please select the <acronym title="-----BEGIN PGP SIGNED MESSAGE-----&#13;⋮&#13;-----BEGIN PGP SIGNATURE-----&#13;⋮&#13;-----END PGP SIGNATURE-----">entire text in the grey area</acronym> in the <strong>License Key</strong> section.
 					</p>
-					<div class="screenshot" style="float: left; margin: 10px 15px">
+					<div class="screenshot">
+						<div class="step">1</div>
 						<img alt="Copy License Key" src="screenshots/license.key.png" width="365" height="534" />
 					</div>
-					<div class="screenshot" style="float: left; margin: 10px 0px">
+					<div class="screenshot">
+						<div class="step">2</div>
 						<img alt="Paste License Key" src="screenshots/license.popup.png" width="220" height="270" />
 					</div>
 				</div>
 
-				<p class="suggestion" style="margin-top: 565px; margin-bottom: 60px">
+				<p class="suggestion">
 					📘 &nbsp; Please read <a target="_blank" href="activate.html">How do I activate my license?</a> for additional license activation options.
 				</p>
 
