Add Next Steps number label

--- a/www.filebot.net/thanks.html
+++ b/www.filebot.net/thanks.html
@@ -34,12 +34,12 @@
 				<div class="section about">
 					<h2>Thank you for purchasing FileBot! 💯</h2>
 					<p>
-						Your license has been issued and will arrive in your inbox shortly. You will receive <a target="_blank" href="activate.html">2 emails</a>. The first email from <a target="_blank" href="mailto:help@paddle.com">help@paddle.com</a> will contain your License Key as plain text. The second email from <a target="_blank" href="mailto:license@filebot.net">license@filebot.net</a> will contain your License File as attachment. Either one can be used to activate FileBot.
+						Your license has been issued and will arrive in your inbox shortly. You will receive <a target="_blank" href="activate.html">2 emails</a>. The first email from <a target="_blank" href="mailto:help@paddle.com">help@paddle.com</a> will contain your License Key as plain text. The second email from <a target="_blank" href="mailto:license@filebot.net">license@filebot.net</a> will contain your License File as file attachment. Either one can be used to activate FileBot.
 					</p>
 					<div class="review message box">
 						<img src="images/information.png" width="48" height="48" />
 						<p>
-						Please store your License File carefully and make sure to keep a copy on Google Drive. If you lose both your License Key and your License File, you may <u>not</u> be able to recover your license in case of data loss, and you may need to purchase a new one.
+						Please store your License File carefully and make sure to keep a copy on Google Drive. If you lose both your License Key and your License File, then you may <u>not</u> be able to recover your license in case of data loss, and you may need to purchase a new one.
 						</p>
 					</div>
 				</div>
