Remove target="_blank" from all <a> elements

--- a/www.filebot.net/cli.html
+++ b/www.filebot.net/cli.html
@@ -39,7 +39,7 @@
 
 			<div class="content">
 				<div class="main-section-screenshot">
-					<a target="_blank" href="screenshots/cli.png"><img alt="FileBot command-line tools" width="330" src="screenshots/cli.png" /></a>
+					<a href="screenshots/cli.png"><img alt="FileBot command-line tools" width="330" src="screenshots/cli.png" /></a>
 				</div>
 				<div class="section about">
 					<h2>About</h2>
@@ -127,7 +127,7 @@
 
 					<h2 class="reference" id="arguments">
 						Argument Reference
-						<a href="docs/api/net/filebot/cli/ArgumentBean.html" class="source" target="_blank">source</a>
+						<a href="docs/api/net/filebot/cli/ArgumentBean.html" class="source">source</a>
 					</h2>
 					<table class="reference options">
 						<tr>
