--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -39,7 +39,7 @@
 
 			<div class="content">
 				<div class="main-section-screenshot">
-					<a target="_blank" title="Format Dialog" href="screenshots/format.png"><img alt="Edit Format Dialog" width="330" src="screenshots/format.png" /></a>
+					<a title="Format Dialog" href="screenshots/format.png"><img alt="Edit Format Dialog" width="330" src="screenshots/format.png" /></a>
 				</div>
 				<div class="section about">
 					<h2>About</h2>
@@ -84,7 +84,7 @@
 					<code><span class="block start">{</span><span class="variable">n</span>.<span class="method">space</span>(<span class="string">'.'</span>)<span class="block end">}</span>.<span class="block start">{</span><span class="string">'s'</span>+<span class="variable">s</span>.<span class="method">pad</span>(<span class="numeral">2</span>)<span class="block end">}</span>e<span class="block start">{</span><span class="variable">e</span>.<span class="method">pad</span>(<span class="numeral">2</span>)<span class="block end">}</span>.<span class="block start">{</span><span class="variable">t</span>.<span class="method">space</span>(<span class="string">'.'</span>)<span class="block end">}</span>.<span class="block start">{</span><span class="variable">vf</span><span class="block end">}</span>.<span class="block start">{</span><span class="variable">vc</span><span class="block end">}</span>.<span class="block start">{</span><span class="variable">ac</span><span class="block end">}</span></code>Firefly.s01e01.Serenity.720p.x264.ac3
 					</p>
 					<p>
-					<code><span class="block start">{</span><span class="variable">n</span><span class="block end">}</span> [<span class="block start">{</span><span class="variable">airdate</span>.<span class="method">format</span>(<span class="string">'<a style="color:inherit" href="http://download.oracle.com/javase/7/docs/api/java/text/SimpleDateFormat.html" target="_blank">yyyy.MM.dd</a>'</span>)<span class="block end">}</span>] <span class="block start">{</span><span class="variable">t</span><span class="block end">}</span></code>The Daily Show [2010.01.05] George Lucas
+					<code><span class="block start">{</span><span class="variable">n</span><span class="block end">}</span> [<span class="block start">{</span><span class="variable">airdate</span>.<span class="method">format</span>(<span class="string">'<a style="color:inherit" href="https://docs.oracle.com/en/java/javase/11/docs/api/java.base/java/time/format/DateTimeFormatter.html#patterns">yyyy.MM.dd</a>'</span>)<span class="block end">}</span>] <span class="block start">{</span><span class="variable">t</span><span class="block end">}</span></code>The Daily Show [2010.01.05] George Lucas
 					</p>
 					<p>
 					<code>E:/Complete/<span class="block start">{</span><span class="variable">n</span><span class="block end">}</span> (<span class="block start">{</span><span class="variable">y</span><span class="block end">}</span>)<span class="block start">{</span><span class="string">'/Season '</span>+<span class="variable">s</span><span class="block end">}</span>/<span class="block start">{</span><span class="variable">s</span>+<span class="string">'x'</span><span class="block end">}</span><span class="block start">{</span><span class="variable">e</span>.<span class="method">pad</span>(<span class="numeral">2</span>)<span class="block end">}</span> - <span class="block start">{</span><span class="variable">t</span><span class="block end">}</span></code>Rename and <strong>move</strong> files. The directory structure is completely up to you.
@@ -95,7 +95,7 @@
 
 					<h2 class="reference" id="bindings">
 						Binding Reference
-						<a href="docs/api/net/filebot/format/MediaBindingBean.html" class="source" target="_blank">source</a>
+						<a href="docs/api/net/filebot/format/MediaBindingBean.html" class="source">source</a>
 					</h2>
 					<table class="reference binding">
 						<tr>
@@ -786,7 +786,7 @@
 
 					<h2 class="reference" id="functions">
 						Function Reference
-						<a href="docs/api/net/filebot/format/ExpressionFormatMethods.html" class="source" target="_blank">source</a>
+						<a href="docs/api/net/filebot/format/ExpressionFormatMethods.html" class="source">source</a>
 					</h2>
 					<p>
 						<code><span class="type">String</span>.<span class="method">pad</span>(<span class="numeral">length</span>, <span class="string">padding</span> = <span class="string">"0"</span>)</code>
