--- a/www.filebot.net/thanks.html
+++ b/www.filebot.net/thanks.html
@@ -34,7 +34,7 @@
 				<div class="section about">
 					<h2>Thank you for purchasing FileBot! 💯</h2>
 					<p>
-						Your license has been issued and will arrive in your inbox shortly. You will receive <a target="_blank" href="activate.html">2 emails</a>. The first email from <a target="_blank" href="mailto:help@paddle.com">help@paddle.com</a> will contain your License Key as plain text. The second email from <a target="_blank" href="mailto:license@filebot.net">license@filebot.net</a> will contain your License File as file attachment. Either one can be used to activate FileBot.
+						Your license has been issued and will arrive in your inbox shortly. You will receive <a href="activate.html">2 emails</a>. The first email from <a href="mailto:help@paddle.com">help@paddle.com</a> will contain your License Key as plain text. The second email from <a href="mailto:license@filebot.net">license@filebot.net</a> will contain your License File as file attachment. Either one can be used to activate FileBot.
 					</p>
 					<div class="review message box">
 						<img src="images/information.png" width="48" height="48" />
@@ -61,17 +61,17 @@
 				</div>
 
 				<p class="suggestion">
-					📘 &nbsp; Please read <a target="_blank" href="activate.html">How do I activate my license?</a> for additional license activation options.
+					📘 &nbsp; Please read <a href="activate.html">How do I activate my license?</a> for additional license activation options.
 				</p>
 
 				<div class="section contact">
 					<img class="icon" src="images/contact.png" alt="contact" width="48" height="48" />
 					<h2>Contact</h2>
 					<p>
-						If you have received <strong>no email</strong> at all then you have likely <a target="_blank" href="forums/viewtopic.php?t=11131">mistyped your email address</a> or your mail server is <a target="_blank" href="forums/viewtopic.php?t=11131">rejecting emails</a>. Please <a target="_blank" href="contact/paddle.html">contact Paddle</a> so they can update their records and resend your License Key to a valid email address.
+						If you have received <strong>no email</strong> at all then you have likely <a href="forums/viewtopic.php?t=11131">mistyped your email address</a> or your mail server is <a href="forums/viewtopic.php?t=11131">rejecting emails</a>. Please <a href="contact/paddle.html">contact Paddle</a> so they can update their records and resend your License Key to a valid email address.
 					</p>
 					<p>
-						<a target="_blank" href="contact/paddle.html">Paddle.com</a> is the Merchant of Record for all our orders. Paddle provides all customer service inquiries and handles returns. Please <a target="_blank" href="contact/paddle.html">contact Paddle</a> if you have any questions regarding your purchase.
+						<a href="contact/paddle.html">Paddle.com</a> is the Merchant of Record for all our orders. Paddle provides all customer service inquiries and handles returns. Please <a href="contact/paddle.html">contact Paddle</a> if you have any questions regarding your purchase.
 					</p>
 				</div>
 
