--- a/www.filebot.net/index.html
+++ b/www.filebot.net/index.html
@@ -46,14 +46,14 @@
 				<a href="/"><img class="logo" alt="logo" src="images/filebot.logo.svg" width="64" height="64" /></a>
 				<h1>
 					FileBot
-					<a href="forums/viewforum.php?f=7" class="source" target="_blank">v@{application.version}</a>
+					<a href="forums/viewforum.php?f=7" class="source">v@{application.version}</a>
 					<span class="description">@{package.synopsis}</span>
 				</h1>
 			</div>
 
 			<div class="content">
 				<div class="screenshot screencast">
-					<a href="getting-started/index.html" title="How to use FileBot" target="_blank">
+					<a href="getting-started/index.html" title="How to use FileBot">
 						<img class="play" alt="play" src="images/play.png" width="8" height="8" />
 						<img alt="screenshot" src="screenshots/rename.png" width="300" height="219" />
 					</a>
@@ -65,7 +65,7 @@
 					<p><strong>FileBot</strong> is the ultimate tool for organizing and renaming your Movies, TV Shows and Anime as well as fetching subtitles and artwork. It's smart and just works.</p>
 				</div>
 
-				<a id="review" class="review message box" style="display:none" href="reviews.php" target="_blank">
+				<a id="review" class="review message box" style="display:none" href="reviews.php">
 				<div class="thumbs up">
 					<img src="images/thumbs_up.png" />
 				</div>
@@ -123,31 +123,31 @@
 					<ul class="list next" id="rename">
 						<li>
 							<div class="screenshot">
-								<a href="getting-started/index.html" target="_blank">
+								<a href="getting-started/index.html">
 									<img class="screenshot dialog" style="top: 29px; right: 20px" width="75" height="55" src="screenshots/small/dialog.format.png" alt="Episode naming scheme" />
 								</a>
-								<a href="getting-started/index.html" target="_blank">
+								<a href="getting-started/index.html">
 									<img width="150" height="118" src="screenshots/small/panel.rename.png" alt="Rename files" />
 								</a>
 							</div>
 							Rename and move hundreds of media files in a matter of seconds
 						</li>
-						<li>Fetch episode info from <a target="_blank" href="https://thetvdb.com/">TheTVDB</a>, <a target="_blank" href="https://anidb.net/">AniDB</a> or <a target="_blank" href="https://www.tvmaze.com/">TVmaze</a></li>
+						<li>Fetch episode info from <a href="https://thetvdb.com/">TheTVDB</a>, <a href="https://anidb.net/">AniDB</a> or <a href="https://www.tvmaze.com/">TVmaze</a></li>
 						<li>Accurate and robust and simply awesome file / episode matching logic</li>
 						<li>Series / Anime / Movie name auto-detection</li>
 						<li>Powerful and highly customizable <a class="important" href="naming.html">episode naming scheme</a><br/><span class="note mediainfo">MediaInfo optional</span></li>
 						<li>Supports language preferences for series and episode titles</li>
-						<li>Supports movie identification and renaming via <a target="_blank" href="https://www.themoviedb.org/">TheMovieDB</a></li>
+						<li>Supports movie identification and renaming via <a href="https://www.themoviedb.org/">TheMovieDB</a></li>
 						<li>Reverse rename files using internal history or the original torrent file</li>
 					</ul>
 					<ul class="list next" id="subtitles">
 						<li>
 							<div class="screenshot">
-								<a href="getting-started/index.html" target="_blank">
+								<a href="getting-started/index.html">
 									<img width="150" height="118" src="screenshots/small/panel.subtitle.png" alt="Download subtitles" />
 								</a>
 							</div>
-							Download subtitles from <a target="_blank" href="https://www.opensubtitles.org/">OpenSubtitles</a>
+							Download subtitles from <a href="https://www.opensubtitles.org/">OpenSubtitles</a>
 						</li>
 						<li>Advanced logic for matching files to most suitable subtitles</li>
 						<li>Find <dfn>exact</dfn> subtitles on OpenSubtitles</li>
@@ -158,7 +158,7 @@
 					<ul class="list next" id="sfv">
 						<li>
 							<div class="screenshot">
-								<a href="getting-started/index.html" target="_blank">
+								<a href="getting-started/index.html">
 									<img width="150" height="118" src="screenshots/small/panel.sfv.png" alt="Verify SFV files" />
 								</a>
 							</div>
@@ -170,7 +170,7 @@
 					</ul>
 					<ul class="list next" id="tools">
 						<li>
-							Identify and rename music using <a target="_blank" href="https://acoustid.org/">AcoustID</a> audio-fingerprints and <a target="_blank" href="https://musicbrainz.org/">MusicBrainz</a> info.
+							Identify and rename music using <a href="https://acoustid.org/">AcoustID</a> audio-fingerprints and <a href="https://musicbrainz.org/">MusicBrainz</a> info.
 						</li>
 						<li>
 							Extract files from <acronym title=".zip files">zip</acronym>, multi-volume <acronym title=".rar files">rar</acronym> and <acronym title=".7z files">7zip</acronym> archives as well as <acronym title=".ISO files">ISO images</acronym>.
@@ -216,10 +216,10 @@
 					</a>
 
 					<ul class="list">
-						<li class="note">Please <a href="forums/viewtopic.php?t=11131" target="forum">type your email address correctly</a> when purchasing a license.</li>
-						<li class="note">Please download and <a href="forums/viewtopic.php?t=11790" target="forum">evaluate FileBot</a> before purchasing a license.</li>
+						<li class="note">Please <a href="forums/viewtopic.php?t=11131">type your email address correctly</a> when purchasing a license.</li>
+						<li class="note">Please download and <a href="forums/viewtopic.php?t=11790">evaluate FileBot</a> before purchasing a license.</li>
 						<li class="note">A single per-user license is valid on all platforms and can be used on multiple machines.</li>
-						<li class="note"><a href="forums/viewtopic.php?t=6265" target="forum">Microsoft Store</a> and <a href="forums/viewtopic.php?t=6265" target="forum">Mac App Store</a> purchases neither include nor require a <a href="forums/viewtopic.php?t=6265" target="forum">universal license</a>.</li>
+						<li class="note"><a href="forums/viewtopic.php?t=6265">Microsoft Store</a> and <a href="forums/viewtopic.php?t=6265">Mac App Store</a> purchases neither include nor require a <a href="forums/viewtopic.php?t=6265">universal license</a>.</li>
 					</ul>
 				</div>
 
@@ -228,9 +228,9 @@
 					<span class="quote">Will you join us?</span>
 					<h2>Contact</h2>
 					<p>
-						The project is continuously seeking for improvements, so any kind of <a target="_blank" href="forums/viewforum.php?f=8">feedback</a> is more than welcome 
-						and if there's any questions or problems just start posting in the <a target="_blank" href="forums/">forums</a> or check the <a target="_blank" href="manual.html"><acronym title="frequently asked questions">FAQ</acronym></a>.
-						We're social as well. Follow us on <a target="_blank" href="https://twitter.com/filebot_renamer">twitter</a>, become a fan on <a target="_blank" href="https://www.facebook.com/filebot">facebook</a> or join our <a target="_blank" href="channel.html">Discord </a> channel.
+						The project is continuously seeking for improvements, so any kind of <a href="forums/viewforum.php?f=8">feedback</a> is more than welcome 
+						and if there's any questions or problems just start posting in the <a href="forums/">forums</a> or check the <a href="manual.html"><acronym title="frequently asked questions">FAQ</acronym></a>.
+						We're social as well. Follow us on <a href="https://twitter.com/filebot_renamer">twitter</a>, become a fan on <a href="https://www.facebook.com/filebot">facebook</a> or join our <a href="channel.html">Discord </a> channel.
 					</p>
 				</div>
 			</div>
