--- a/www.filebot.net/purchase.html
+++ b/www.filebot.net/purchase.html
@@ -54,10 +54,10 @@
 					</a>
 
 					<ul class="list">
-						<li class="note">Please <a href="forums/viewtopic.php?t=11131" target="forum">type your email address correctly</a> when purchasing a license.</li>
-						<li class="note">Please download and <a href="forums/viewtopic.php?t=11790" target="forum">evaluate FileBot</a> before purchasing a license.</li>
+						<li class="note">Please <a href="forums/viewtopic.php?t=11131">type your email address correctly</a> when purchasing a license.</li>
+						<li class="note">Please download and <a href="forums/viewtopic.php?t=11790">evaluate FileBot</a> before purchasing a license.</li>
 						<li class="note">A single per-user license is valid on all platforms and can be used on multiple machines.</li>
-						<li class="note"><a href="forums/viewtopic.php?t=6265" target="forum">Microsoft Store</a> and <a href="forums/viewtopic.php?t=6265" target="forum">Mac App Store</a> purchases neither include nor require a <a href="forums/viewtopic.php?t=6265" target="forum">universal license</a>.</li>
+						<li class="note"><a href="forums/viewtopic.php?t=6265">Microsoft Store</a> and <a href="forums/viewtopic.php?t=6265">Mac App Store</a> purchases neither include nor require a <a href="forums/viewtopic.php?t=6265">universal license</a>.</li>
 					</ul>
 				</div>
 
