--- a/www.filebot.net/script.html
+++ b/www.filebot.net/script.html
@@ -39,7 +39,7 @@
 
 			<div class="content">
 				<div class="main-section-screenshot">
-					<a href="https://github.com/filebot/scripts" target="_blank"><img alt="See Examples" width="330" src="screenshots/script.png" /></a>
+					<a href="https://github.com/filebot/scripts"><img alt="See Examples" width="330" src="screenshots/script.png" /></a>
 				</div>
 				<div class="section about">
 					<h2>About</h2>
