Cleanup HTML headers

--- a/www.filebot.net/download.html
+++ b/www.filebot.net/download.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+		<base href="@{link.site.index}">
+
 		<title>Download FileBot</title>
 		<link rel="icon" href="favicon.png" sizes="16x16 32x32" type="image/png">
 		<link rel="stylesheet" href="base.css" type="text/css">
