--- a/www.filebot.net/index.html
+++ b/www.filebot.net/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" itemscope itemtype="http://schema.org/Product">
 	<head>
-		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-		<meta name="keywords" content="@{package.tags}" />
+		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+		<base href="@{link.site.index}">
 
-		<title>@{application.name} - @{package.synopsis}</title>
 		<meta name="description" content="@{package.description}" />
+		<meta name="keywords" content="@{package.tags}" />
 		<meta name="author" content="@{package.company}" />
 
 		<meta itemprop="name" content="@{application.name} - @{package.synopsis}" />
@@ -20,11 +20,11 @@
 		<meta property="fb:admins" content="1320039434" />
 		<meta property="fb:page_id" content="102742293101063" />
 
+		<title>@{application.name} - @{package.synopsis}</title>
 		<link rel="icon" href="favicon.png" sizes="16x16 32x32" type="image/png">
 		<link rel="stylesheet" href="base.css" type="text/css">
 		<link rel="stylesheet" href="base.dark.css" type="text/css" media="(prefers-color-scheme: dark)">
 
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Dawning+of+a+New+Day">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js" integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ" crossorigin="anonymous"></script>
 		<script src="https://cdn.paddle.com/paddle/paddle.js"></script>
