--- a/www.filebot.net/thanks.html
+++ b/www.filebot.net/thanks.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+		<base href="@{link.site.index}" target="_blank">
+
 		<title>Thank you for purchasing FileBot! 💯</title>
 		<link rel="icon" href="favicon.png" sizes="16x16 32x32" type="image/png">
 		<link rel="stylesheet" href="base.css" type="text/css" />
 		<link rel="stylesheet" href="thanks.css" type="text/css" />
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 	</head>
 	<body>
 		<div class="page">
