--- a/www.filebot.net/cli.html
+++ b/www.filebot.net/cli.html
@@ -1,16 +1,10 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" itemscope itemtype="http://schema.org/Product">
 	<head>
-		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-		<meta name="keywords" content="@{package.tags}" />
+		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+		<base href="@{link.site.index}">
 
 		<title>FileBot Command-line Interface</title>
-		<meta name="description" content="The FileBot command-line interface will allow you to rename tv shows, download subtitles and do lots of other nifty things directly directly from the console. Running on an headless server is fully supported. Make sure to check out FileBot scripting as well for a new level of automation." />
-
-		<meta itemprop="name" content="FileBot Command-line Interface" />
-		<meta itemprop="description" content="The FileBot command-line interface will allow you to rename tv shows, download subtitles and do lots of other nifty things directly directly from the console. Running on an headless server is fully supported. Make sure to check out FileBot scripting as well for a new level of automation." />
-		<meta itemprop="image" content="@{link.image.logo}" />
-
 		<link rel="icon" href="favicon.png" sizes="16x16 32x32" type="image/png">
 		<link rel="stylesheet" href="base.css" type="text/css">
 		<link rel="stylesheet" href="code.css" type="text/css">
