--- a/www.filebot.net/eula.html
+++ b/www.filebot.net/eula.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<title>End User License Agreement - FileBot</title>
+		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+		<base href="@{link.site.index}">
 
+		<title>End User License Agreement - FileBot</title>
 		<link rel="icon" href="favicon.png" sizes="16x16 32x32" type="image/png">
 		<link rel="stylesheet" href="base.css" type="text/css">
 		<link rel="stylesheet" href="base.dark.css" type="text/css" media="(prefers-color-scheme: dark)">
-
 		<link rel="stylesheet" href="eula.css" type="text/css">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,700" type="text/css">
 	</head>
