--- a/www.filebot.net/naming.html
+++ b/www.filebot.net/naming.html
@@ -1,16 +1,10 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" itemscope itemtype="http://schema.org/Product">
 	<head>
-		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-		<meta name="keywords" content="@{package.tags}" />
+		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+		<base href="@{link.site.index}">
 
 		<title>Format Expressions</title>
-		<meta name="description" content="Define your own naming scheme and customize it to your liking. FileBot format expressions give you ultimate control over how FileBot will rename and move your media files. Anything is possible." />
-
-		<meta itemprop="name" content="FileBot Format Expressions" />
-		<meta itemprop="description" content="Define your own naming scheme and customize it to your liking. FileBot format expressions give you ultimate control over how FileBot will rename and move your media files. Anything is possible." />
-		<meta itemprop="image" content="@{link.image.logo}" />
-
 		<link rel="icon" href="favicon.png" sizes="16x16 32x32" type="image/png">
 		<link rel="stylesheet" href="base.css" type="text/css">
 		<link rel="stylesheet" href="code.css" type="text/css">
