--- a/www.filebot.net/script.html
+++ b/www.filebot.net/script.html
@@ -1,16 +1,10 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" itemscope itemtype="http://schema.org/Product">
 	<head>
-		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-		<meta name="keywords" content="@{package.tags}" />
+		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+		<base href="@{link.site.index}">
 
 		<title>Scripts and Automation</title>
-		<meta name="description" content="FileBot scripting allows to easily write scripts for any kind of automation in Groovy. There is no limits. Extract archives, download subtitles, rename episodes, fetch artwork and banners and delete left-behind clutter. All in one go." />
-
-		<meta itemprop="name" content="FileBot Scripting and Automation" />
-		<meta itemprop="description" content="FileBot scripting allows to easily write scripts for any kind of automation in Groovy. There is no limits. Extract archives, download subtitles, rename episodes, fetch artwork and banners and delete left-behind clutter. All in one go." />
-		<meta itemprop="image" content="@{link.image.logo}" />
-
 		<link rel="icon" href="favicon.png" sizes="16x16 32x32" type="image/png">
 		<link rel="stylesheet" href="base.css" type="text/css">
 		<link rel="stylesheet" href="code.css" type="text/css">
