Cleanup HTML headers

--- a/www.filebot.net/index.html
+++ b/www.filebot.net/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" itemscope itemtype="http://schema.org/Product">
+<!DOCTYPE html>
+<html>
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 		<base href="@{link.site.index}">
@@ -14,11 +14,9 @@
 
 		<meta property="og:title" content="@{application.name}" />
 		<meta property="og:type" content="product" />
-		<meta property="og:url" content="@{package.homepage}" />
+		<meta property="og:url" content="@{link.site.index}" />
 		<meta property="og:image" content="@{link.image.logo}" />
 		<meta property="og:site_name" content="@{application.name} - @{package.synopsis}" />
-		<meta property="fb:admins" content="1320039434" />
-		<meta property="fb:page_id" content="102742293101063" />
 
 		<title>@{application.name} - @{package.synopsis}</title>
 		<link rel="icon" href="favicon.png" sizes="16x16 32x32" type="image/png">
